# oss-browser-buildin-tool

./: README.md  browser_server.py  client_openai_web_browser_tool.py  pyproject.toml  standard_client.py
simple_browser/: backend.py  simple_browser_tool.py  tool.py
simple_search/: web_search.py
