[project]
name = "oss-browser-buildin-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "chz>=0.4.0",
    "html2text>=2025.4.15",
    "lxml>=6.0.2",
    "mcp[cli]>=1.25.0",
    "openai>=2.14.0",
    "openai-harmony>=0.0.8",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
]
